# basic_RAG_api

./: README.md  docker-compose.yml  pyproject.toml  rag_with_longchain.py  requirements.txt
app/: __init__.py  db.py  main.py
app/chats/: api.py  constants.py  exceptions.py  ingest.py  models.py  retrieval.py  services.py  streaming.py
app/core/: api.py  constants.py  logs.py  models.py
basic_rag_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
db/migrations/: 20240417140927_create_models.sql
requirements/: requirements-dev.txt  requirements.txt
settings/: __init__.py  base.py
